[package]
name = "task_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "*"
pyo3 = { version = "0.20.0", features = ["auto-initialize", "extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde_json = "1.0.125"
tokio = { version = "*", features = ["full"]}
lazy_static = "1.5.0"
shared_memory = "*"

# 맥OS의 경우
[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize", "extension-module", "abi3-py310"] }
pyo3-ffi = { version = "0.20.0", features = ["extension-module"] }

# 맥OS의 경우 컴파일 플래그 추가
[target.'cfg(target_os = "macos")'.rustflags]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[build-dependencies]
pyo3-build-config = "0.20.0"

[package.metadata.pyo3]
extension-module = false
